Skull.js collection view in all it's glory.

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,11 +2,11 @@
 
 <h1>Channel list</h1>
 
-<div id="channel">
-
-<script type="text/template" id="template">
-  <span class="pippolo">
-    Channel: <%%= name %>
-  </span>
-</script>
+<div id="channels">
 </div>
+
+<script type="text/template" id="channel">
+  <div class="pippolo">
+    Channel: <%%= name %>
+  </div>
+</script>
