added bootstrap.css and jqueryui

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,6 +9,8 @@
     <script src="<%= asset_path('application.js') %>"></script>
   </head>
   <body>
+	<div class="container">
     <%= yield %>
+  </div>
   </body>
 </html>
