--- a/views/index.erb
+++ b/views/index.erb
@@ -2,11 +2,18 @@
 
 <h1>Channel list</h1>
 
-<div id="channels">
+<div id="channels-container">
+  <div id="channels">
+  </div>
 </div>
 
+
+<script type="text/template" id="channel-entry">
+  <div class="slice duration-<%%= duration %>"><%%= title %></div>
+</script>
+
 <script type="text/template" id="channel">
-  <div class="pippolo">
-    Channel: <%%= name %>
-  </div>
+  <%% _(programs).each(function(x){ %>
+    <%%= _.template($("#channel-entry").html())(x) %>
+  <%% }); %>
 </script>
